@@ -10,6 +10,8 @@ MIDIbox NG V1.001
 
    o Ethernet and OSC setup now stored with ETH/OSC commands in .NGC file
 
+   o SysEx variables are now stored with a SYSEX_VAR command in .NGC file
+
 
 MIDIbox NG V1.000
 ~~~~~~~~~~~~~~~~~
